profilelist1exp/unpackaged/objects/OEM_Requirement__c.object
<CustomObject>
    <description>Created for CR11964 OEM requirement that has relationship to Opportunity</description>
    <fields>
        <fullName>Account_Plan_Strategy__c</fullName>
        <description>Created for CR11965 Information section&apos;s fields in OEM Requirement layout</description>
        <formula>Opportunity__r.Related_Strategy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To populate this field, link the Opportunity to a Strategy on the Customer Account Plan</inlineHelpText>
        <label>Account Plan Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_kit_Additional_items__c</fullName>
        <description>Created for CR 11966 Requirement Summary section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>Detail any other information re content, kit&apos;s etc</inlineHelpText>
        <label>Customer kit / Additional items</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dell_OEM_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR11965 Information section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>OEM Lead should be updated with the current OEM rep working this specific requirement at this point in time</inlineHelpText>
        <label>Dell OEM Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OEM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dell_Products__c</fullName>
        <description>Created for CR 11966 Requirement Summary section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>What Products are involved - be as detailed as possible</inlineHelpText>
        <label>Dell Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Box_Contents__c</fullName>
        <description>Created for CR 11966 Requirement Summary section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>What, if any, should go inside the Documents Box</inlineHelpText>
        <label>Document Box Contents</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Example_Quote__c</fullName>
        <description>Created for CR 11966 Requirement Summary section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>Please list all OEM related Quote numbers</inlineHelpText>
        <label>Example Quote #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Detail__c</fullName>
        <description>Created for CR 11966 Requirement Summary section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>Detail the hardware involved, chassis Type etc.</inlineHelpText>
        <label>Hardware Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OEM_Record_Type__c</fullName>
        <description>Created for CR11965 Information section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>Make sure to close the OEM requirement when no longer needed</inlineHelpText>
        <label>OEM Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEM_Solution_Name__c</fullName>
        <inlineHelpText>Give the record a relevant Name</inlineHelpText>
        <label>OEM Solution Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Created for CR11965 Information section&apos;s fields in OEM Requirement layout</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OEM Requirements</relationshipLabel>
        <relationshipName>OEM_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requirements_Summary__c</fullName>
        <description>Created for CR 11966 Requirement Summary section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>Write a summary based on the Discussions with the Customer</inlineHelpText>
        <label>Requirements Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Chassis_Contents__c</fullName>
        <description>Created for CR 11966 Requirement Summary section&apos;s fields in OEM Requirement layout</description>
        <inlineHelpText>What, if any, should be inside or with the chassis.  If nothing just state N/A</inlineHelpText>
        <label>System Chassis Contents</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>OEM Requirement</label>
    <nameField>
        <displayFormat>OEM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>